# rai-interview-task-solution

api/: README.md  pyproject.toml
api/template_matching_api/: db.py  db_model.py  file_storage.py  main.py
api/template_matching_api/api/: api.py  dependencies.py
api/template_matching_api/api/endpoints/: document_template.py  template_matching_job.py
api/template_matching_api/api_models/: document_template.py  template_matching_job.py
api/template_matching_api/scripts/: create_and_seed_db.py
api/template_matching_api/scripts/storage_seed/templates/1/: template_file
api/template_matching_api/scripts/storage_seed/templates/2/: template_file
api/template_matching_api/scripts/storage_seed/templates/3/: template_file
api/template_matching_api/scripts/storage_seed/templates/4/: template_file
api/template_matching_api/tests/: conftest.py  storage.py
api/template_matching_api/tests/api/endpoints/: test_document_template.py  test_template_matching_job.py
gui/: .env.development  .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gui/src/: App.vue  main.ts
gui/src/api/: ApiClient.ts  index.ts
gui/src/api/resources/: DocumentTemplate.ts  TemplateMatchingJob.ts  common.ts  index.ts
gui/src/components/document-template/: DocumentTemplateForm.vue  TemplateImage.vue  (+1 more)
gui/src/lib/: formRules.ts
gui/src/plugins/: vuetify.ts
gui/src/router/: index.ts
gui/src/stores/: Reporting.ts
gui/src/views/: DocumentTemplateList.vue  TemplateMatchingJobDetail.vue  TemplateMatchingJobList.vue
(+3 files in other folders)
