[tool.poetry]
name = "template-matching-api"
version = "0.1.0"
description = "API for template matching management"
authors = ["lukas.bauer <lukas.bauer@resistant.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
